<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/my_nanodegree_apps"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <LinearLayout
        android:id="@+id/buttons_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/header_text_view"
        android:layout_alignLeft="@+id/header_text_view"
        android:layout_alignRight="@+id/header_text_view"
        android:layout_alignStart="@+id/header_text_view"
        android:layout_below="@+id/header_text_view"
        android:layout_marginTop="36dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotify_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/header_text_view"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background"
            android:text="@string/spotify_streamer"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/scores_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/spotify_button"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background"
            android:text="@string/scores_app"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/library_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/scores_button"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background"
            android:text="@string/library_app"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/build_it_bigger_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/library_button"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background"
            android:text="@string/build_it_bigger"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/xyz_reader_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/build_it_bigger_button"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background"
            android:text="@string/xyz_reader"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/capstone_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/xyz_reader_button"
            android:background="@drawable/button_background"
            android:text="@string/capstone_my_own_app"
            android:textColor="@android:color/white"
/>

    </LinearLayout>

</RelativeLayout>
